--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "@merried/ui",
 	"version": "0.0.0",
-	"private": true,
-	"exports": {
-		"./*": "./src/*.tsx"
-	},
+	"main": "./index.ts",
+	"types": "./index.ts",
+	"license": "MIT",
 	"scripts": {
 		"lint": "eslint . --max-warnings 0",
 		"generate:component": "turbo gen react-component",
