--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
 		"@merried/design-system": "workspace:*",
 		"@merried/utils": "workspace:*",
 		"@merried/ui": "workspace:*",
+		"@merried/icon": "workspace:*",
 		"typescript": "^5",
 		"@types/node": "^20",
 		"@types/react": "^19",
