--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint \"**/*.ts*\""
   },
   "dependencies": {
-    "react": "18.2.0",
+    "react": "^19.0.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
