--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,7 @@
     "@merried/design-system": "workspace:*",
     "@merried/utils": "workspace:*",
     "@merried/icon": "workspace:*",
+    "@merried/hooks": "workspace:*",
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.10",
     "@types/react": "19.0.10",
