--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -12,8 +12,8 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "eslint": "^9.23.0",
     "styled-reset": "^4.4.7",
     "typescript": "5.8.2"
