--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,15 +10,16 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@merried/design-system": "workspace:*",
+    "@merried/hooks": "workspace:*",
+    "@merried/icon": "workspace:*",
+    "@merried/utils": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@merried/design-system": "workspace:*",
-    "@merried/utils": "workspace:*",
-    "@merried/icon": "workspace:*",
-    "@merried/hooks": "workspace:*",
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.10",
     "@types/react": "19.0.10",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "19.0.4",
     "@types/styled-components": "^5.1.26",
     "eslint": "^9.23.0",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.17"
   }
