--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,25 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.71.0",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@merried/design-system": "workspace:*",
+    "@merried/icon": "workspace:*",
+    "@merried/ui": "workspace:*",
+    "@merried/utils": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@merried/design-system": "workspace:*",
-    "@merried/utils": "workspace:*",
-    "@merried/ui": "workspace:*",
-    "@merried/icon": "workspace:*",
-    "typescript": "^5",
+    "@tanstack/react-query-devtools": "^5.74.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/styled-components": "^5.1.26",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3",
-    "@types/styled-components": "^5.1.26"
+    "typescript": "^5"
   }
 }
