build/mobile(#18): recoil, styled-components, 디자인 시스템 설치

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "recoil": "^0.7.7",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@merried/design-system": "workspace:*",
+    "@merried/icon": "workspace:*",
+    "@merried/ui": "workspace:*",
+    "@merried/utils": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
