--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src", "src/types"],
+  "include": ["src", "src/types", "assets"],
   "exclude": ["node_modules", "dist"]
 }
