fix/packages(#34): tsconfig의 include 수정

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -3,6 +3,14 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src", "src/types", "assets"],
+  "include": [
+    "src",
+    "src/types",
+    "assets",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.d.ts",
+    "**/*.woff2"
+  ],
   "exclude": ["node_modules", "dist"]
 }
