--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.71.0",
     "@tanstack/react-query-devtools": "^5.74.7",
     "@types/styled-components": "^5.1.26",
+    "dayjs": "^1.11.13",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
