--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.17"
   },
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18.2.17",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "kakao.maps.d.ts": "^0.1.40",
     "typescript": "^5"
   }
 }
