--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "recoil": "^0.7.7",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
