--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,13 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.71.0",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "dayjs": "^1.11.13",
+    "react-kakao-maps-sdk": "^1.1.27",
+    "@toss/react": "^1.8.1",
+    "@toss/use-overlay": "^1.4.2",
+    "next": "14.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.17"
   },
@@ -34,6 +38,7 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "kakao.maps.d.ts": "^0.1.40",
     "typescript": "^5"
   }
 }
