--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,23 +14,24 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.71.0",
-    "dayjs": "^1.11.13",
-    "react-kakao-maps-sdk": "^1.1.27",
     "@toss/react": "^1.8.1",
     "@toss/use-overlay": "^1.4.2",
+    "dayjs": "^1.11.13",
     "next": "14.2.3",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@merried/design-system": "workspace:*",
+    "@merried/hooks": "workspace:*",
     "@merried/icon": "workspace:*",
     "@merried/ui": "workspace:*",
     "@merried/utils": "workspace:*",
-    "@merried/hooks": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@tanstack/react-query-devtools": "^5.74.7",
