--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,9 +18,9 @@
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^2.4.4",
     "@types/node": "^22.13.10",
-    "@types/react": "19.0.10",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/react-color": "^3.0.13",
-    "@types/react-dom": "19.0.4",
     "@types/styled-components": "^5.1.26",
     "eslint": "^9.23.0",
     "styled-components": "^6.1.17",
@@ -28,9 +28,9 @@
     "typescript": "5.8.2"
   },
   "dependencies": {
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^6.1.17"
   }
 }
