--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,9 +15,11 @@
     "@toss/react": "^1.8.1",
     "@toss/use-overlay": "^1.4.2",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "next": "14.2.3",
     "react": "18.2.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "18.2.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "recoil": "^0.7.7",
