--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.71.0",
     "@toss/react": "^1.8.1",
     "@toss/use-overlay": "^1.4.2",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "next": "14.2.3",
     "react": "^18.2.0",
